apps/kamaji/base/allow-to-apiserver.yaml
---
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: allow-to-apiserver
  namespace: kamaji-system
spec:
  selector: app.kubernetes.io/name == 'kamaji'
  types:
    - Egress
  egress:
    - action: Allow
      protocol: TCP
      destination:
        services:
          name: kubernetes
          namespace: default
