apps/kamaji/base/expose-to-apiserver.yaml
---
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: expose-to-apiserver
  namespace: kamaji-system
spec:
  selector: app.kubernetes.io/name == 'kamaji'
  types:
    - Ingress
  ingress:
    # Allow incoming traffic from the K8s API server.
    # Unfortunately, since the API servers run in the network namespaces of their hosts,
    # matching them properly is not really possible so we need this.
    - action: Allow
      protocol: TCP
      source:
        nets:
          # Norway control plane prefix
          - 10.24.2.0/24
          # EMC control plane prefix
          - 10.8.2.0/24
          # easy compute control plane prefix
          - 10.32.0.0/18
          # DCent control plane prefix
          - 10.48.0.0/18
